--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.class
+target
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -8,5 +9,7 @@
 *.war
 *.ear
 
+# Intellij #
+*.iml
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
